name:                servant-websockets
version:             1.0.0
homepage:            https://github.com/moesenle/servant-websockets#readme
synopsis:            Small library providing WebSocket endpoints for servant.
description:         Small library providing WebSocket endpoints for servant.
license:             BSD3
license-file:        LICENSE
author:              Lorenz Moesenlechner
maintainer:          moesenle@gmail.com
copyright:           2017 Lorenz Moesenlechner
category:            Servant, Web
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.API.WebSocket
                     , Servant.API.WebSocketConduit
  build-depends:       aeson
                     , async
                     , base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , exceptions
                     , resourcet
                     , servant-server
                     , text
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  ghc-options:         -Wall
  default-language:    Haskell2010

executable websocket-echo
  hs-source-dirs:      examples
  main-is:             Echo.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , conduit
                     , servant-server
                     , servant-websockets
                     , wai
                     , warp
  default-language:    Haskell2010

executable websocket-stream
  hs-source-dirs:      examples
  main-is:             Stream.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , conduit
                     , servant-server
                     , servant-websockets
                     , text
                     , wai
                     , warp
                     , websockets
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/moesenle/servant-websockets
